--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3",
+    "framer-motion": "^12.23.0",
+    "input-otp": "^1.4.2",
     "lucide-react": "^0.488.0",
     "next": "^14.2.3",
     "react": "18.2.0",
@@ -53,5 +55,6 @@
     "prettier-plugin-tailwindcss": "^0.6.8",
     "tailwindcss": "^3.4.15",
     "typescript": "^5.6.3"
-  }
+  },
+  "packageManager": "pnpm@10.12.1+sha512.f0dda8580f0ee9481c5c79a1d927b9164f2c478e90992ad268bbb2465a736984391d6333d2c327913578b2804af33474ca554ba29c04a8b13060a717675ae3ac"
 }
